--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bike-Farm Nepal</title>
+      <script src="https://khalti.com/static/khalti-checkout.js"></script> 
+
+    
   </head>
   <body>
     <div id="root"></div>
